# TDCV

./: README.md  exercise1_1.m  exercise1_1_saveCorners.m
Exercise01/: corner_pixel.mat  exercise1_1.m  exercise1_1_saveCorners.m
Exercise01/auxiliary_code/: TriangleRayIntersection.m  readPoints.m
Exercise02/: Exercise02-SiftIn3d.mat  exercise2.m
Exercise03/: Get3DPoints.m  computeJacobianSymbolic.m  exercise3.m
Exercise04-06/: CMakeLists.txt
Exercise04-06/include/: HogVisualization.h  RandomForest.h
Exercise04-06/src/: HogVisualization.cpp  RandomForest.cpp  evaluation.cpp  main.cpp  plotPRCurves.py
Exercise07-09/: Readme.md
Exercise07-09/src/: data_loader.py  loss.py  metric.py  models.py  test.py  train.py
auxiliary_code/: TriangleRayIntersection.m
